fix spacing on export columns

--- a/src/ui/less/components/queryResultsExport.less
+++ b/src/ui/less/components/queryResultsExport.less
@@ -50,7 +50,7 @@
     .key-value-pair {
       border-radius: 4px;
       border: 1px dashed @theme-query-result-export-border;
-      padding: 15px;
+      padding: 5px;
       margin-bottom: 15px;
       position: relative;
       overflow: hidden;
@@ -61,10 +61,21 @@
         }
       }
       .menu {
+        z-index: 1;
         .btn-hover-menu();
       }
       .form-group {
-        padding-right: 10px;
+        margin: 0 0 10px;
+        &:last-child {
+          margin-bottom: 0;
+        }
+        .left-col {
+          padding-left: 0;
+          text-align: right;
+        }
+        .right-col {
+          padding-right: 0;
+        }
       }
     }
   }
